syntax = "proto3";

option csharp_namespace = "Scanfer.Studio.GrpcSer";

package GrpcSer;

service GrpcService{
	rpc GetServiceTime(GetServiceTimeRequest) returns (GetServiceTimeResponse);
}

message GetServiceTimeRequest{
	string key =1;
}

message GetServiceTimeResponse{
	string currTime = 2;
	int32 code = 1;
}

 